--- a/games.html
+++ b/games.html
@@ -40,7 +40,7 @@ function FP_getObjectByID(id,o) {//v1.0
 <p align="center">&nbsp;</p>
 <p align="center"><a href="run.html">
 <img border="0" id="img6" src="button21.jpg" height="33" width="170" alt="Run" fp-style="fp-btn: Soft Tab 5; fp-font-size: 11; fp-proportional: 0" fp-title="Run" onmouseover="FP_swapImg(1,0,/*id*/'img6',/*url*/'button22.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img6',/*url*/'button21.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img6',/*url*/'button23.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img6',/*url*/'button22.jpg')"></a></p>
-<p align="center"><a href="https://thegamesystems.github.io/OKids-Java/DuckLife.html">
+<p align="center"><a href="https://ytechtv.github.io/OKids-Java/DuckLife.html">
   <img src="http://okids.xyz/ducklifebanner.png" title="Duck Life - Train Your Duck to be a racing champion!">
 </a>
 <p align="center"><a href="pmania.html">
