--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ function FP_getObjectByID(id,o) {//v1.0
 </script>
 </head>
 
-<body onload="FP_preloadImgs(/*url*/'button9.jpg',/*url*/'button8.jpg',/*url*/'button1F.jpg',/*url*/'button1E.jpg')" background="https://thegamesystems.github.io/OKids/defwe8b-40e16264-c2dc-4d61-9d41-abbc98516497.png">
+<body onload="FP_preloadImgs(/*url*/'button9.jpg',/*url*/'button8.jpg',/*url*/'button1F.jpg',/*url*/'button1E.jpg')" background="https://thegamesystems.github.io/OKids/defwe8b-40e16264-c2dc-4d61-9d41-abbc98516497.gif">
 
-<p align="left"><b><font size="6">&nbsp;</font></b><a href="index.html"><img border="0" src="../../Downloads/OKids%20logo%20-%20White%20backround.png" width="106" height="49"></a><b><font size="1">&nbsp;&nbsp;&nbsp;
+<p align="left"><b><font size="6">&nbsp;</font></b><a href="index.html"><img border="0" src=".http://okids.xyz/Downloads/OKids%20logo%20-%20White%20backround.png" width="106" height="49"></a><b><font size="1">&nbsp;&nbsp;&nbsp;
 <a href="ptkids_videos.html">
 <img border="0" id="img2" src="button7.jpg" height="20" width="100" alt="Videos" fp-style="fp-btn: Border Bottom 1" fp-title="Videos" onmouseover="FP_swapImg(1,0,/*id*/'img2',/*url*/'button8.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img2',/*url*/'button7.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img2',/*url*/'button9.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img2',/*url*/'button8.jpg')"></a></font></b><font size="1">&nbsp;&nbsp;&nbsp;
 <a href="games.html">
