--- a/ccbb.html
+++ b/ccbb.html
@@ -69,7 +69,7 @@ function FP_getObjectByID(id,o) {//v1.0
 </noscript>
 
 <script>
-  swfobject.embedSWF("http://thegamesystems.github.io/Downloads/ccbb.swf", "ruffle", 800, 600);
+  swfobject.embedSWF("http://ytechtv.github.io/Downloads/noggin_nav.swf", "ruffle", 800, 600);
 </script>
 
 </body>
