--- a/ccbb.html
+++ b/ccbb.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>OKids - Chicka Chicka Boom Boom (PRESCHOOL)</title>
+<title>OKids - UNKNOWN</title>
 <script language="JavaScript">
 <!--
 function FP_preloadImgs() {//v1.0
@@ -69,7 +69,7 @@ function FP_getObjectByID(id,o) {//v1.0
 </noscript>
 
 <script>
-  swfobject.embedSWF("http://ytechtv.github.io/Downloads/noggin_nav.swf", "ruffle", 800, 600);
+  swfobject.embedSWF("http://ytechtv.github.io/OKids-Testing-Java/noggin_nav.swf", "ruffle", 800, 600);
 </script>
 
 </body>
