--- a/ccbb.html
+++ b/ccbb.html
@@ -54,7 +54,7 @@ function FP_getObjectByID(id,o) {//v1.0
 </p>
 
 <!-- Title stays OUTSIDE the embed -->
-<p align="center"><font size="6"><b>Chicka Chicka Boom Boom</b></font></p>
+<p align="center"><font size="6"><b>UNKNOWN</b></font></p>
 
 <!-- Game container -->
 <div style="display: flex; justify-content: center; align-items: center;">
@@ -69,7 +69,7 @@ function FP_getObjectByID(id,o) {//v1.0
 </noscript>
 
 <script>
-  swfobject.embedSWF("http://ytechtv.github.io/OKids-Testing-Java/noggin_nav.swf", "ruffle", 800, 600);
+  swfobject.embedSWF("http://ytechtv.github.io/OKids-Testing-Java/noggin_nav.swf", "ruffle", 782, 60, 5);
 </script>
 
 </body>
